# sitoml

./: .gitignore  Containerfile  GEMINI.md  Makefile  dune-project  entrypoint.sh  plan-k8s.md  plan-ocaml.md  rq-ocaml.md  sito_core.opam
docs/: USER_GUIDE.md
k8s/: api.yaml  pvc.yaml  redis.yaml  worker.yaml
lib/: diff.ml  diff.mli  discretize.ml  discretize.mli  dune  expr.ml  expr.mli  job_queue.ml  job_queue.mli  lexer.mll  mlir_emitter.ml  mlir_emitter.mli  parser.mly  parser_util.ml  parser_util.mli  runner.ml  runner.mli  server_logic.ml  server_logic.mli  simplify.ml  simplify.mli  sito_core.ml  sito_core.mli  stochastic.ml  stochastic.mli
test/: dune  test_server.ml  test_sito.ml  test_verification.ml
web/: dune  index.html  main.ml  main.mli
